# Agentic-Chatbot

./: README.md  pyproject.toml  requirements.txt
AINews/: weekly_summary.md
src/langgraphagenticai/: main.py
src/langgraphagenticai/LLMS/: groqllm.py
src/langgraphagenticai/graph/: graph_builder.py
src/langgraphagenticai/nodes/: ai_news_node.py  basic_chatbot_node.py  chatbot_with_tool_node.py
src/langgraphagenticai/state/: state.py
src/langgraphagenticai/ui/: uiconfigfile.ini
src/langgraphagenticai/ui/streamlitui/: display_result.py  loadui.py
